# udv-qna-bot

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  docker-compose.yml  justfile
.github/workflows/: check.yml  docker-publish-bot.yml  docker-publish-cms.yml
.sqlx/: query-1b4d52c830ad4ccdc484d59e8859df77318f22367c81df47983dcf1f62706ede.json  query-22878b2600d7bafb026ecae6fae8bb5e8ad2888606b16e9b70ed16e7ba9dc4e3.json  query-24c549ba95c88259c00e2b7e48d7d38d4468ff39def0f0a5c2c367e3f2133c96.json  query-266ca63f7b9ec09003a8a093082535ce76e90cc6fe5732f52d59b70d8b198ff8.json  query-2cfe88b3abf87461dec05785644d849575b093981077f3fc28e786a179a1b7c4.json  query-3f1f09fc4fc1eee255f9054f7530b7afd14ae9cfd0aba9afb01c4c04fd436e66.json  query-42630695797644c3c01dba66f7e471a96748af60b5824ae58902a855e71668f3.json  query-44f67ac9d2bf2182f8b032819d93e00cf8831008daa7a7ea243796f882a5ab8b.json  query-481d9a78f2affcf3836ed94a056a1c081e80b7fecf9b00096208ce0d623f8e1a.json  query-4ff15a40f59c50ef179a90afe7e07d1f8ccf2eea0476353aac7fde8f7ffe2281.json  query-7f5f484b046a85fe981b7bf19cb8eb9a5c44c04f4c749bdddc5ef9cf5dd5f295.json  query-82c854252bc363d07bb3d3f000b5b2c38e960e62022bc372024ef9d3015dbcf8.json  query-a08108f82c315539547b12ce2c469f65b97c46774570b1b9c2ce89e8449ecabf.json  query-a14bd519fd3ecda2df5d05cfbdfe889037b1b863b492088b17d2a4197054b7d5.json  query-a2c624a66b1999281d3b63e85b77785d0aae8d5ebc4865b7d42d7afd81e6f58c.json  query-b82e2f5f56562c6a9d1d6551b6c3dd55ddd80ca846dfcfb14fad5a6da45729e6.json  query-bd5fd5b5f2b8a55ed71739ecbb7324ed348fe0261777cd0a464c221a6b4ea321.json  query-c9aa91c2f975633e926df52b68f97938842359764a8cbd4508c37abcd7c0a895.json  query-e14a774eac710117e1abe9fe0a18771a399cbd65342d76ff7292bdd6143763ed.json  query-e603c3fb9ab1b6e08122212052abd8b65ac59d70b0473b885c2ffbd7ffb1b57d.json  query-f4040442428b013748c0e5e362df73eb6824d9e2d99afa98229759606855f4ae.json  query-f52de2da363d8bd000378257bd31f20880964105209a457fd451077b428f058d.json
bot/: Cargo.toml  Dockerfile
bot/src/: auth.rs  group_chat.rs  main.rs  private_chat.rs
cli/: Cargo.toml
cli/src/: main.rs
cms/: Cargo.toml  Dockerfile  Rocket.toml
cms/src/: categories.rs  error_handlers.rs  lib.rs  main.rs  questions.rs  users.rs
cms/templates/: base.html.tera  categories.html.tera  index.html.tera  nav.html.tera  questions.html.tera
db/: Cargo.toml  sqlx-data.json
db/migrations/: 20220206101109_init.sql  20220918101940_hiden_questions.sql  20220929155045_ordering.sql
db/migrations/2022-02-06-101109_init/: down.sql
db/src/: categories.rs  lib.rs  models.rs  questions.rs  schema.rs  users.rs
frontend/: Cargo.toml  Trunk.toml
frontend/src/: main.rs
migrations/: 20220611061850_add_attachment.sql  20220816145010_add_user_fields.sql  20230528020036_multiple_files.sql
models/: Cargo.toml
models/src/: lib.rs
server/: Cargo.toml  Dockerfile  README.md
server/src/: categories.rs  deserializers.rs  main.rs  questions.rs  users.rs
server/src/routes/: categories.rs  mod.rs  questions.rs  users.rs
server/templates/: base.html  nav.html
server/templates/categories/: categories.html  categories_reordering.html  category_row.html  category_row_edit.html
server/templates/questions/: attachment_row.html  attachments_modal.html  question_row.html  question_row_edit.html  questions.html  questions_reordering.html  questions_table.html
src/: lib.rs  telemetry.rs
src/bot/: auth.rs  group_chat.rs  mod.rs  private_chat.rs
src/db/: mod.rs
src/db/queries/: categories.rs  mod.rs  questions.rs  users.rs
src/server/: app.rs  deserializers.rs  mod.rs
src/server/routes/: categories.rs  mod.rs  questions.rs  users.rs
templates/: index.html  nav.html  questions.html
templates/categories/: categories.html
templates/questions/: attachments_modal.html  questions.html  questions_reordering.html
