[package]
name = "udv-qna-bot"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/udv-group/udv-qna-bot"

[dependencies]
anyhow = "^1"
askama = { version = "^0.13" }
askama_web = { version = "0.13.0", features = ["axum-0.8"] }
axum = { version = "^0.8", features = ["macros", "multipart"] }
axum_typed_multipart = "^0.15"
clap = { version = "^4.5", features = ["derive"] }
config = { version = "^0.15" }
csv = "^1.1"
dotenv = "^0.15"
futures-util = "^0.3"
itertools = "^0.14"
secrecy = { version = "^0.10", features = ["serde"] }
serde = { version = "^1.0.197", features = ["derive"] }
serde_json = '^1'
serde-aux = { version = "4" }
tempfile = "^3.8"
tokio = { version = "^1.36", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "^0.6", features = ["trace", "fs"] }
tracing = '^0.1'
prometheus = "^0.14"
lazy_static = "^1.5.0"

[dependencies.tracing-subscriber]
version = "^0.3"
features = ["registry", "env-filter", "fmt"]

[dependencies.teloxide]
version = "^0.14"
features = ["macros", "sqlite-storage-nativetls"]

[dependencies.sqlx]
version = "^0.8"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
    "ipnetwork",
    "sqlite",
]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
