[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.9", features = ["auto-send", "macros", "sqlite-storage"] }
serde = { version = "1.0", features = ["derive"]  }
serde_json = { version = "1.0" }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite", "migrate" ] }
db = {path = "../db"}
anyhow = "1.0"
itertools = "0.10"
dotenv = "0.15"

tokio = { version =  "1.15", features = ["full"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio-stream = "0.1.6"