[package]
repository = "https://github.com/udv-group/udv-qna-bot"
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
sqlx.workspace = true
csv = "1.1"
tokio = { version = "1.15", features = ["full"] }
db = { path = "../db" }
