[package]
name = "cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"]}
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sqlx.workspace = true
db = {path = "../db"}
serde = "1.0"
dotenv.workspace = true