[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite", "migrate", "offline" ] }
dotenv = "0.15"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }