[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
sqlx.workspace = true
db = {path = "../db"}
serde = "1.0"
dotenv.workspace = true
tokio = { version = "1.27.0", features = ["full"] }
