[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["macros"] }
sqlx.workspace = true
db = { path = "../db" }
serde = "1.0"
dotenv.workspace = true
tokio = { version = "1.27.0", features = ["full"] }
askama = "0.12"
serde-aux = "4.2.0"
